# College-Projects

./: README.md  main.cpp
Minesweeper/: minesweeper.cpp
Webshop/: design3.css  generate.php  head.php  index.php  see_more_description.php
Webshop/admin/: admin_panel.php
Webshop/cart/: cart.php  cart_submit.php
Webshop/functions/: add_opinion.php  add_product.php  check_email.php  database.php  moderate_opinions.php  see_opinions.php  sort.php  validation_text.php
Webshop/header/: header_end.php  header_start.php  sorting_buttons.php
Webshop/login/: check_login.php  login.php  login_form.php  logout.php
game/: CMakeLists.txt  main.cpp  platform.cpp  platform.h  score.cpp  score.h  texture.cpp  texture.h
projectjaz/: HELP.md  mvnw.cmd  pom.xml
projectjaz/src/main/java/com/example/projectjaz/: ProjectjazApplication.java
projectjaz/src/main/java/com/example/projectjaz/controller/: AuthorController.java  AuthorControllerClient.java  SongController.java
projectjaz/src/main/java/com/example/projectjaz/entity/: Author.java  Song.java
projectjaz/src/main/java/com/example/projectjaz/exception/: AuthorNotFoundException.java
projectjaz/src/main/java/com/example/projectjaz/repository/: AuthorRepository.java  SongRepository.java
projectjaz/src/main/resources/: application.properties
projectjaz/src/main/resources/static/: add_author-stylesheet.css
projectjaz/src/main/resources/templates/: add_author.html
projectjaz/src/test/java/com/example/projectjaz/: ProjectjazApplicationTests.java
(+4 files in other folders)
